Fix login header alignment on wide screens by removing relative positioning from content

--- a/styles/login.css
+++ b/styles/login.css
@@ -1,8 +1,3 @@
-@media (min-width: 1440px) {
-  :root {
-    --logo-left: calc((100vw - 1440px) / 2 + 8px);
-  }
-}
 
 * {
   box-sizing: border-box;
